# Krita-Minimal-Brush

./: CMakeLists.txt  README  kis_minimal_paintop.cpp  kis_minimal_paintop.cpp~  kis_minimal_paintop.h  kis_minimal_paintop.h~  kis_minimal_paintop_options.cpp  kis_minimal_paintop_options.h  kis_minimal_paintop_settings.cpp  kis_minimal_paintop_settings.cpp~  kis_minimal_paintop_settings.h  kis_minimal_paintop_settings.h~  kis_minimal_paintop_settings_widget.cpp  kis_minimal_paintop_settings_widget.h  kis_minimalop_option.cpp  kis_minimalop_option.h  krita_minimal_paintop.cpp  krita_minimal_paintop.h  krita_minimal_paintop_settings.cpp  krita_minimal_paintop_settings.h  krita_minimal_paintop_settings_widget.cpp  krita_minimal_paintop_settings_widget.h  krita_minimalop_option.cpp  krita_minimalop_option.h  kritaminimalpaintop.desktop  minimal_brush.cpp  minimal_brush.h  minimal_paintop_plugin.cpp  minimal_paintop_plugin.cpp~  minimal_paintop_plugin.h  wdgminimaloptions.ui
